# SOLLOL

./: .gitignore  ARCHITECTURE.md  COORDINATOR_REUSE_INVESTIGATION.md  DEPLOYMENT.md  DEPLOY_GPU_REPORTER.md  Dockerfile  EMBEDDING_PERFORMANCE_RESULTS.md  GPU_MONITORING_GUIDE.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  dashboard.html  docker-compose.test.yml  docker-compose.yml  ollama_discussion_final.md  ollama_discussion_followup.md  pyproject.toml  setup.py  test_final.py  test_fixed.py  test_pdf_embedding_performance.py  test_real.py  test_simple.py  test_typer_minimal.py  test_typer_no_rich.py  test_typer_simple2.py  test_vram_monitoring.py
.github/workflows/: lint.yml
benchmarks/: README.md
config/: hosts.txt
docs/: index.md
docs/getting-started/: quick-start.md
examples/: live_dashboard_demo.py
examples/full_project_demo/: README.md  __init__.py  __main__.py  cli.py
examples/gateway_local_cluster/: README.md  __main__.py  cli.py  client.py  gateway_process.py  mock_ollama.py  model_setup.py  ollama_runtime.py  process_utils.py  run.sh  run_demo.py
examples/gateway_local_cluster/data/: chat_request.json  embed_request.json  generate_request.json
examples/gateway_mock_cluster/: README.md  __main__.py  cli.py  client.py  gateway_process.py  mock_ollama.py  process_utils.py  run.sh  run_demo.py
examples/gateway_mock_cluster/data/: chat_request.json  generate_request.json
examples/tests/: test_gateway_local_cluster.py  test_gateway_mock_cluster.py
src/sollol/: __init__.py  cli.py  client.py  config.py  dashboard.py  dashboard_service.py  execution.py  gateway.py  hybrid_router.py  install_systemd_service.py  integration.py  intelligence.py  llama_cpp_coordinator.py  memory.py  metrics.py  network_observer.py  node_cluster.py  node_health.py  ollama_gguf_resolver.py  ollama_node.py  pool.py  prioritization.py  ray_advanced_router.py  ray_hybrid_router.py  registry.py  rpc_discovery.py  rpc_registry.py  setup_llama_cpp.py  sollol.py  unified_dashboard.py
tests/: conftest.py
tests/integration/: test_fault_tolerance.py  test_gateway_local_cluster.py
tests/unit/: test_intelligence.py  test_prioritization.py
