
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sollol"
version = "0.1.0"
description = "SOLLOL - Super Ollama Load-balancer with performance-aware routing"
requires-python = ">=3.8"
dependencies = [
    "ray[serve]>=2.9.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "aiohttp>=3.8.0",
    "dask[distributed]>=2023.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "prometheus-client>=0.17.0",
    "tenacity>=8.2.0"
]

[project.scripts]
sollol = "sollol.cli:cli"
