
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sollol"
version = "0.1.0"
description = "SOLLOL - Super Ollama Load-balancer with performance-aware routing"
requires-python = ">=3.8"
dependencies = [
    "ray[serve]>=2.9.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "aiohttp>=3.8.0",
    "dask[distributed]>=2023.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "prometheus-client>=0.17.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

[project.scripts]
sollol = "sollol.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
