
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sollol"
version = "0.1.0"
description = "Production-ready intelligent load balancing for Ollama clusters with context-aware routing and adaptive learning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BenevolentJoker-JohnL", email = "benevolentjoker@sollol.dev"}
]
maintainers = [
    {name = "BenevolentJoker-JohnL", email = "benevolentjoker@sollol.dev"}
]
keywords = [
    "ollama",
    "load-balancing",
    "ai",
    "llm",
    "distributed-systems",
    "intelligent-routing",
    "ray",
    "dask",
    "fastapi",
    "kubernetes",
    "docker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "ray[serve]>=2.9.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "aiohttp>=3.8.0",
    "dask[distributed]>=2023.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "prometheus-client>=0.17.0",
    "tenacity>=8.2.0"
]

[project.urls]
Homepage = "https://github.com/BenevolentJoker-JohnL/SOLLOL"
Documentation = "https://benevolentjoker-johnl.github.io/SOLLOL/"
Repository = "https://github.com/BenevolentJoker-JohnL/SOLLOL"
Issues = "https://github.com/BenevolentJoker-JohnL/SOLLOL/issues"
Changelog = "https://github.com/BenevolentJoker-JohnL/SOLLOL/releases"
Sponsor = "https://github.com/sponsors/BenevolentJoker-JohnL"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

[project.scripts]
sollol = "sollol.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
